--- a/src/style.css
+++ b/src/style.css
@@ -1,24 +1,41 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
 .body {
   background-color: rgb(255, 233, 253);
+}
+h1 {
+  color: #505050;
+  font-size: 30px;
+  font-weight: 100;
+  line-height: 36px;
+  margin-bottom: 0;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+li {
+list-style-type: none;
+  padding-left: 0px;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 100;
+  color: rgb(114, 114, 114);
 }
 footer {
   text-align: center;
 }
 .weather-app {
-  width: 600px;
-}
-.description {
-  list-style-type: none;
-  padding-left: 0px;
-  font-size: smaller;
-  color: rgb(71, 70, 71);
+  max-width: 600px;
+  margin: 0 auto;
+  padding-top: 40px;
+  margin-top: 30px;
+  border: 1px solid rgb(71, 70, 71);
+  border-radius: 7px;
 }
 .small-font {
   font-size: smaller;
-}
-.dino {
-  display: inline-block;
-  padding-top: 7px;
 }
 .temp-number {
   font-size: 2em;
@@ -33,12 +50,6 @@ footer {
   box-shadow: cadetblue;
 }
 
-.border-right-0 {
-  max-width: 850px;
-  margin: 30px auto;
-  padding-top: 20px;
-  background-color: transparent;
-}
 .units {
   float: top !important;
   margin-top: 7px;
