--- a/src/style.css
+++ b/src/style.css
@@ -77,3 +77,19 @@ footer {
   color: #505050;
   cursor: default;
 }
+
+.weather-forecast {
+  margin-top: 10px;
+  text-align: center;
+  color: rgb(51, 51, 51);
+}
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.6;
+}
+.weather-forecast-temperature {
+  font-size: 13px;
+}
+.weather-forecast-temperature-min {
+  opacity: 0.6;
+}
