--- a/src/style.css
+++ b/src/style.css
@@ -19,8 +19,10 @@ li {
   font-size: 14px;
   line-height: 16px;
   font-weight: 100;
-  text-transform: capitalize;
   color: rgb(114, 114, 114);
+}
+li::first-letter {
+  text-transform: uppercase;
 }
 footer {
   text-align: center;
